Update master layout
